testsuite/tests/parser/should_fail/T10196Fail3.stderr

T10196Fail3.hs:5:2: error: lexical error at character '/7526'
